# p_69_branch_monkey_mcp

./: .gitignore  .mcp.json  README.md  install.sh  pyproject.toml
.branch_monkey/: data.db
branch_monkey_mcp/: __init__.py  connection_logger.py  dev_proxy.py  local_server.py  logo.py  project_discovery.py  relay_client.py  relay_manager.py  relay_tui.py  server.py  workflow.py
branch_monkey_mcp/bridge_and_local_actions/: __init__.py  agent_manager.py  app.py  cli_providers.py  config.py  database.py  dev_proxy.py  dev_server.py  dev_server_manager.py  worktree.py
branch_monkey_mcp/bridge_and_local_actions/routes/: __init__.py  advanced.py  agents.py  config_routes.py  dev_servers.py  git.py  health.py  merge.py  projects.py  proxy.py  relay.py  worktrees.py
branch_monkey_mcp/kompany_mcp/: __init__.py  api_client.py  auth.py  mcp_app.py  state.py
branch_monkey_mcp/kompany_mcp/tools/: __init__.py  agents.py  connections.py  contexts.py  crons.py  decisions.py  deployments.py  domains.py  machines.py  metrics.py  notes.py  projects.py  status.py  tasks.py  teams.py  versions.py
branch_monkey_mcp/local_server/: __init__.py  git_utils.py
branch_monkey_mcp/local_server/routes/: agents.py  config_routes.py  git.py  proxy.py
branch_monkey_mcp/server/: mcp_app.py  state.py
branch_monkey_mcp/server/tools/: contexts.py  notes.py  projects.py  tasks.py  versions.py
branch_monkey_mcp/skills/kompany/: skill.md
branch_monkey_mcp/skills/kompany/rules/: canvas-workflow.md  create-machine.md  layout-positioning.md  (+4 more)
branch_monkey_mcp/static/: dashboard.html
