[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch-monkey-mcp"
version = "0.3.0"
description = "Branch Monkey MCP Server for Claude Code - Task management and team collaboration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Branch Monkey Contributors" }
]
keywords = ["mcp", "claude", "claude-code", "task-management", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "supabase>=2.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pyngrok>=7.0.0",
]

[project.scripts]
branch-monkey-mcp = "branch_monkey_mcp.server:main"
branch-monkey-relay = "branch_monkey_mcp.relay_client:main"
branch-monkey-proxy = "branch_monkey_mcp.dev_proxy:main"

[project.urls]
Homepage = "https://github.com/gneyal/branch-monkey-mcp"
Documentation = "https://p-63-branch-monkey.pages.dev/install"

[tool.hatch.build.targets.wheel]
packages = ["branch_monkey_mcp"]
